# tokmd

./: AGENTS.md  CHANGELOG.md  Cargo.toml  PR_DRAIN.md  README.md  ROADMAP.md  _typos.toml  action.yml  clippy.toml  codecov.yml  deny.toml  flake.nix  tokmd-role.md
crates/tokmd/: Cargo.toml
crates/tokmd-analysis/: Cargo.toml  README.md
crates/tokmd-analysis/src/: lib.rs  source_complexity.rs
crates/tokmd-analysis/src/analysis/: files.rs  mod.rs
crates/tokmd-analysis/src/analysis/enrichers/: code_quality.rs
crates/tokmd-analysis/src/api_surface/: symbols.rs
crates/tokmd-analysis/src/api_surface/symbols/: go.rs  java.rs  js_ts.rs  python.rs  rust.rs
crates/tokmd-analysis/src/archetype/: mod.rs  rules.rs
crates/tokmd-analysis/src/ast/: facts.rs  mod.rs  python.rs  registry.rs  rust.rs  typescript.rs
crates/tokmd-analysis/src/complexity/: details.rs  functions.rs  mod.rs
crates/tokmd-analysis/src/complexity/details/: c_style.rs  go.rs  javascript.rs  python.rs  rust.rs
crates/tokmd-analysis/src/complexity/functions/: rust.rs
crates/tokmd-analysis/src/complexity/tests/: unit.rs
crates/tokmd-analysis/src/content/: complexity.rs  io.rs  mod.rs
crates/tokmd-analysis/src/content/complexity/: cognitive.rs  cyclomatic.rs  functions.rs  nesting.rs  shared.rs
crates/tokmd-analysis/src/content/io/: tags.rs
crates/tokmd-analysis/src/derived/: distribution.rs  integrity.rs  mod.rs  ratios.rs
crates/tokmd-analysis/src/derived/tests/: deep.rs  properties.rs
crates/tokmd-analysis/src/effort/: classify.rs  delta.rs  model.rs
crates/tokmd-analysis/src/effort/classify/: gitattributes.rs  heuristics.rs
crates/tokmd-analysis/src/grid/: disabled_feature.rs  mod.rs  presets.rs
crates/tokmd-analysis/src/grid/tests/: bdd.rs  deep.rs  deep_coverage.rs  deep_grid_w48.rs  deep_w68.rs  grid_depth_w55.rs  grid_depth_w61.rs  grid_w73.rs  properties.rs  (+1 more)
crates/tokmd-analysis/src/halstead/: mod.rs  operators.rs  tokenizer.rs
crates/tokmd-analysis/src/near_dup/: clusters.rs  mod.rs  pairs.rs  selection.rs
crates/tokmd-analysis/src/source_complexity/: mask.rs
crates/tokmd-analysis/tests/: analysis_deep_w64.rs  analysis_depth_w62.rs  feature_gates_w71.rs  orchestration.rs  orchestration_w54.rs  orchestration_w73.rs
crates/tokmd-cockpit/: Cargo.toml  README.md
crates/tokmd-cockpit/src/: composition.rs  contracts.rs  doc_artifacts_evidence.rs  file_stat.rs  gates.rs  lib.rs  proof_evidence.rs  render.rs  review_plan.rs  supply_chain.rs  trend.rs
crates/tokmd-cockpit/src/gates/: contracts.rs  determinism_gate.rs
crates/tokmd-cockpit/src/proof_evidence/: artifacts.rs  fixtures.rs  inputs.rs  model.rs  normalize.rs
crates/tokmd-cockpit/src/render/: bun_ub_sensor.rs  comment.rs  evidence.rs  manifest.rs  markdown.rs  proof_summary.rs  review_map.rs  review_map_proof.rs  review_packet.rs  sections.rs
crates/tokmd-cockpit/tests/: bdd.rs  properties.rs  render_artifacts_branches.rs  render_markdown_branches.rs
crates/tokmd-cockpit/tests/snapshots/: snapshot_w45__snapshot_cockpit_comment_with_contracts.snap  snapshot_w45__snapshot_cockpit_md_multi_file.snap  snapshot_w45__snapshot_cockpit_md_with_failed_gates.snap
crates/tokmd-io-port/: Cargo.toml
crates/tokmd-io-port/tests/: properties.rs
crates/tokmd-python/: Cargo.toml
crates/tokmd-python/src/: args.rs  envelope.rs  lib.rs
crates/tokmd-types/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-types/src/: context.rs  diff.rs  evidence_packet.rs  inventory.rs  lib.rs
crates/tokmd-types/src/cockpit/: evidence.rs
crates/tokmd-types/tests/: manifest_contract.rs
crates/tokmd-wasm/: Cargo.toml  README.md
crates/tokmd-wasm/src/: lib.rs
crates/tokmd/schemas/: evidence-packet.schema.json  review-map.schema.json  review-packet-evidence.schema.json
crates/tokmd/src/: analysis_utils.rs  config.rs  context_pack.rs  error_hints.rs  git_support.rs  lib.rs
crates/tokmd/src/cli/: parser.rs
crates/tokmd/src/commands/: analyze.rs  baseline.rs  cockpit.rs  context.rs  diff.rs  evidence_packet.rs  gate.rs  handoff.rs  mod.rs  run.rs  sensor.rs  syntax.rs
crates/tokmd/src/config/: resolve.rs
crates/tokmd/src/context_pack/: budget.rs  output.rs  render.rs  select.rs
crates/tokmd/tests/: analyze_integration.rs  badge_integration.rs  baseline_integration.rs  baseline_w71.rs  bdd_analyze_scenarios_w50.rs  bdd_diff_scenarios_w50.rs  bdd_module_scenarios_w50.rs  bdd_scenarios_w71.rs  bdd_scenarios_w75.rs  cli_badge_e2e.rs  cli_comprehensive.rs  cli_determinism_e2e_w54.rs  cli_e2e.rs  cli_e2e_w42.rs  cli_e2e_w58.rs  cli_e2e_w65.rs  cli_e2e_w69.rs  cli_error_help_w73.rs  cli_error_paths_w51.rs  cli_errors_w66.rs  cli_output_formats_w66.rs  cli_parser_properties.rs  cli_pipeline_e2e_w54.rs  cli_snapshot_golden.rs  cli_syntax_integration.rs  cli_tools_e2e.rs  cockpit_integration.rs  config_resolution.rs  context_e2e.rs  cross_crate_integration_w50.rs  deep_cli_complex_w48.rs  deep_cli_formats_w49.rs  deep_run_cockpit_w52.rs  determinism.rs  determinism_hardening_w51.rs  determinism_regression.rs  diff_deep_w77.rs  diff_w71.rs  docs.rs  docs_sync_w72.rs  (+23 more)
crates/tokmd/tests/snapshots/: cli_snapshot_golden__analyze_json.snap  cli_snapshot_golden__analyze_markdown.snap  cli_snapshot_golden__help_ast.snap
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
xtask/src/proof/: mod.rs  policy.rs  policy_ast.rs  validate.rs
xtask/src/tasks/: ast_shadow_check.rs  ast_shadow_compare.rs  badges.rs  ci_actuals.rs  ci_lane_whitelist.rs  ci_plan.rs  ci_route.rs  ci_runner_health.rs  coverage_receipt.rs  doc_artifacts.rs  docs.rs  lint_policy.rs  mod.rs  mutation_scope.rs  no_panic.rs  proof_artifacts_check.rs  proof_observation_run_ids.rs  proof_observation_status.rs  proof_observation_thresholds.rs  proof_plan.rs  proof_policy.rs  repo_graph.rs  review_packet_check.rs  ripr_pr.rs  workspace.rs
xtask/tests/: ci_actuals_w96.rs  coverage_receipt_w95.rs  docs_schema_w72.rs  docs_w43.rs  fuzz_dict_w100.rs  lint_policy_w93.rs  no_panic_w94.rs  proof_plan_w92.rs  proof_policy_w90.rs  release_source_closure_w101.rs  repo_graph_w99.rs
(+483 files in other folders)
