[workspace]
resolver = "2"
members = [
    "crates/tokmd",
    "crates/tokmd-analysis",
    "crates/tokmd-analysis-types",
    "crates/tokmd-core",
    "crates/tokmd-envelope",
    "crates/tokmd-format",
    "crates/tokmd-gate",
    "crates/tokmd-git",
    "crates/tokmd-model",
    "crates/tokmd-node",
    "crates/tokmd-python",
    "crates/tokmd-wasm",
    "crates/tokmd-scan",
    "crates/tokmd-sensor",
    "crates/tokmd-settings",
    "crates/tokmd-types",
    "crates/tokmd-cockpit",
    "crates/tokmd-io-port",
    "fuzz",
    "xtask",
]
default-members = [
    "crates/tokmd",
    "crates/tokmd-analysis",
    "crates/tokmd-analysis-types",
    "crates/tokmd-cockpit",
    "crates/tokmd-core",
    "crates/tokmd-envelope",
    "crates/tokmd-format",
    "crates/tokmd-gate",
    "crates/tokmd-git",
    "crates/tokmd-io-port",
    "crates/tokmd-model",
    "crates/tokmd-scan",
    "crates/tokmd-sensor",
    "crates/tokmd-settings",
    "crates/tokmd-types",
    "crates/tokmd-wasm",
]
# xtask is a workspace member but excluded from default-members

[workspace.package]
version = "1.10.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/EffortlessMetrics/tokmd"
repository = "https://github.com/EffortlessMetrics/tokmd"
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]

[workspace.metadata.crane]
name = "tokmd-workspace"

[workspace.dependencies]
# Internal crates - centralized for "bump once" version management
tokmd = { path = "crates/tokmd", version = "1.10.0" }
tokmd-analysis = { path = "crates/tokmd-analysis", version = "1.10.0" }
tokmd-analysis-types = { path = "crates/tokmd-analysis-types", version = "1.10.0" }
tokmd-envelope = { path = "crates/tokmd-envelope", version = "1.10.0" }
tokmd-core = { path = "crates/tokmd-core", version = "1.10.0" }
tokmd-format = { path = "crates/tokmd-format", version = "1.10.0" }
tokmd-git = { path = "crates/tokmd-git", version = "1.10.0" }
tokmd-model = { path = "crates/tokmd-model", version = "1.10.0" }
tokmd-wasm = { path = "crates/tokmd-wasm", version = "1.10.0" }
tokmd-scan = { path = "crates/tokmd-scan", version = "1.10.0" }
tokmd-sensor = { path = "crates/tokmd-sensor", version = "1.10.0" }
tokmd-settings = { path = "crates/tokmd-settings", version = "1.10.0" }
tokmd-types = { path = "crates/tokmd-types", version = "1.10.0" }
tokmd-io-port = { path = "crates/tokmd-io-port", version = "1.10.0" }
tokmd-gate = { path = "crates/tokmd-gate", version = "1.10.0" }
tokmd-cockpit = { path = "crates/tokmd-cockpit", version = "1.10.0" }

# External crates - centralized for consistent versioning
anyhow = "1.0.102"
blake3 = "1.8.3"
proptest = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
insta = { version = "1.47.0", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

# Temporary until upstream `home` grows a non-Unix/non-Windows fallback.
[patch.crates-io]
home = { path = "vendor/home-0.5.12" }
