[workspace]
resolver = "2"
members = [
    "crates/tokmd",
    "crates/tokmd-analysis",
    "crates/tokmd-analysis-types",
    "crates/tokmd-core",
    "crates/tokmd-envelope",
    "crates/tokmd-format",
    "crates/tokmd-gate",
    "crates/tokmd-git",
    "crates/tokmd-model",
    "crates/tokmd-node",
    "crates/tokmd-python",
    "crates/tokmd-wasm",
    "crates/tokmd-scan",
    "crates/tokmd-sensor",
    "crates/tokmd-settings",
    "crates/tokmd-types",
    "crates/tokmd-cockpit",
    "crates/tokmd-io-port",
    "fuzz",
    "xtask",
]
exclude = ["vendor/home-0.5.12"]
default-members = [
    "crates/tokmd",
    "crates/tokmd-analysis",
    "crates/tokmd-analysis-types",
    "crates/tokmd-cockpit",
    "crates/tokmd-core",
    "crates/tokmd-envelope",
    "crates/tokmd-format",
    "crates/tokmd-gate",
    "crates/tokmd-git",
    "crates/tokmd-io-port",
    "crates/tokmd-model",
    "crates/tokmd-scan",
    "crates/tokmd-sensor",
    "crates/tokmd-settings",
    "crates/tokmd-types",
    "crates/tokmd-wasm",
]
# xtask is a workspace member but excluded from default-members

[workspace.package]
version = "1.11.1"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/EffortlessMetrics/tokmd"
repository = "https://github.com/EffortlessMetrics/tokmd"
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
unexpected_cfgs = "warn"
const_item_interior_mutations = "deny"
function_casts_as_integer = "deny"

[workspace.lints.clippy]
# Panic-free production and tests
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
panic = "deny"
unreachable = "deny"
unwrap_used = "deny"
expect_used = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
string_slice = "deny"
indexing_slicing = "deny"
out_of_bounds_indexing = "deny"
unchecked_time_subtraction = "deny"

# AST / parser / UTF-8 / slice safety
char_indices_as_byte_indices = "deny"
sliced_string_as_bytes = "deny"
index_refutable_slice = "deny"

# Silent failure
let_underscore_future = "deny"
let_underscore_must_use = "deny"
let_underscore_lock = "deny"
unused_result_ok = "deny"
map_err_ignore = "deny"
assertions_on_result_states = "deny"
lines_filter_map_ok = "deny"

# Async / concurrency
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
await_holding_invalid_type = "deny"
future_not_send = "warn"
large_futures = "warn"
arc_with_non_send_sync = "deny"
rc_mutex = "deny"
mut_mutex_lock = "deny"
readonly_write_lock = "deny"

# Unsafe / memory
mem_forget = "deny"
forget_non_drop = "deny"
drop_non_drop = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
repr_packed_without_abi = "deny"

# Numeric correctness
float_cmp = "deny"
float_cmp_const = "deny"
float_equality_without_abs = "deny"
lossy_float_literal = "deny"
cast_sign_loss = "deny"
cast_possible_wrap = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
invalid_upcast_comparisons = "deny"
cast_abs_to_unsigned = "deny"
cast_enum_truncation = "deny"
cast_nan_to_int = "deny"
manual_midpoint = "warn"
manual_is_multiple_of = "warn"
manual_div_ceil = "warn"
arithmetic_side_effects = "warn"

# File/process/path footguns
suspicious_open_options = "deny"
nonsensical_open_options = "deny"
ineffective_open_options = "deny"
path_buf_push_overwrite = "deny"
join_absolute_paths = "deny"
read_line_without_trim = "warn"
exit = "deny"

# API / trait correctness
iter_not_returning_iterator = "deny"
expl_impl_clone_on_copy = "deny"
infallible_try_from = "deny"
fallible_impl_from = "deny"
error_impl_error = "deny"
result_unit_err = "warn"
result_large_err = "warn"

# Good taste that pays rent
format_in_format_args = "deny"
to_string_in_format_args = "deny"
unused_format_specs = "deny"
unnecessary_debug_formatting = "warn"
uninlined_format_args = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_strip = "warn"
manual_split_once = "warn"
manual_is_variant_and = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
match_result_ok = "deny"
cloned_instead_of_copied = "warn"
iter_cloned_collect = "warn"
iter_overeager_cloned = "warn"
needless_collect = "warn"
redundant_closure = "warn"
redundant_closure_for_method_calls = "warn"
missing_panics_doc = "deny"
missing_errors_doc = "warn"

# Suppression governance
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
blanket_clippy_restriction_lints = "deny"
ignore_without_reason = "deny"
should_panic_without_expect = "deny"

# Rust 1.94 lint ratchets (activated with MSRV 1.95)
same_length_and_capacity = "deny"
manual_ilog2 = "warn"
decimal_bitwise_operands = "warn"
needless_type_cast = "warn"

# Rust 1.95 lint ratchets (activated with MSRV 1.95)
manual_checked_ops = "warn"
manual_take = "warn"
manual_pop_if = "warn"
duration_suboptimal_units = "warn"
unnecessary_trailing_comma = "warn"

[workspace.metadata.crane]
name = "tokmd-workspace"

[workspace.dependencies]
# Internal crates - centralized for "bump once" version management
tokmd = { path = "crates/tokmd", version = "1.11.1" }
tokmd-analysis = { path = "crates/tokmd-analysis", version = "1.11.1" }
tokmd-analysis-types = { path = "crates/tokmd-analysis-types", version = "1.11.1" }
tokmd-envelope = { path = "crates/tokmd-envelope", version = "1.11.1" }
tokmd-core = { path = "crates/tokmd-core", version = "1.11.1" }
tokmd-format = { path = "crates/tokmd-format", version = "1.11.1" }
tokmd-git = { path = "crates/tokmd-git", version = "1.11.1" }
tokmd-model = { path = "crates/tokmd-model", version = "1.11.1" }
tokmd-wasm = { path = "crates/tokmd-wasm", version = "1.11.1" }
tokmd-scan = { path = "crates/tokmd-scan", version = "1.11.1" }
tokmd-sensor = { path = "crates/tokmd-sensor", version = "1.11.1" }
tokmd-settings = { path = "crates/tokmd-settings", version = "1.11.1" }
tokmd-types = { path = "crates/tokmd-types", version = "1.11.1" }
tokmd-io-port = { path = "crates/tokmd-io-port", version = "1.11.1" }
tokmd-gate = { path = "crates/tokmd-gate", version = "1.11.1" }
tokmd-cockpit = { path = "crates/tokmd-cockpit", version = "1.11.1" }

# External crates - centralized for consistent versioning
anyhow = "1.0.102"
blake3 = "1.8.3"
proptest = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
insta = { version = "1.47.0", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

# Temporary until upstream `home` grows a non-Unix/non-Windows fallback.
[patch.crates-io]
home = { path = "vendor/home-0.5.12" }
