[package]
publish = false
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.6.0", features = ["derive"] }
serde = { workspace = true }
toml = "1.1.2"
cargo_metadata = "0.23.1"
petgraph = "0.8.3"
chrono = "0.4"
globset = "0.4.18"
semver = "1"
serde_json = "1"

[dev-dependencies]
serde_json = "1"
tempfile.workspace = true
toml = "1.1.2"
