[package]
name = "tokmd-cockpit"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Cockpit PR metrics computation and rendering for tokmd."
documentation = "https://docs.rs/tokmd-cockpit"
readme = "README.md"
keywords = ["code-review", "pr-metrics", "cockpit", "tokmd"]
categories = ["development-tools"]

[features]
default = ["git"]
git = ["dep:tokmd-git"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
ignore = "0.4.23"
serde.workspace = true
serde_json.workspace = true
time = { version = "0.3.41", features = ["formatting"] }
tokmd-analysis = { path = "../tokmd-analysis", version = "1.11.0", default-features = false }
tokmd-analysis-types.workspace = true
tokmd-envelope.workspace = true
tokmd-types.workspace = true

# Optional git support
tokmd-git = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
proptest.workspace = true
tempfile.workspace = true
