[package]
name = "tokmd-io-port"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "I/O port traits for host-abstracted file access, enabling WASM targets."
readme = "README.md"
keywords = ["io", "wasm", "abstraction", "filesystem", "adapter"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-io-port"

[dependencies]

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
