[package]
name = "tokmd-types"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core data types and contracts for tokmd. Tier 1 stability."
readme = "README.md"
keywords = ["code-analysis", "types", "receipts", "schema", "serde"]
categories = ["development-tools", "data-structures"]
documentation = "https://docs.rs/tokmd-types"

[dependencies]
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
insta = { workspace = true }
tokmd-scan = { path = "../tokmd-scan", version = ">=1.9, <2" }
tokmd-format = { path = "../tokmd-format", version = ">=1.9, <2" }
tokmd-model = { path = "../tokmd-model", version = ">=1.9, <2" }
