[package]
name = "tokmd-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "wasm-bindgen product surface for tokmd in-memory workflows."
readme = "README.md"
keywords = ["wasm", "bindings", "analysis", "receipts", "inventory"]
categories = ["development-tools", "wasm"]
documentation = "https://docs.rs/tokmd-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["analysis"]
analysis = ["tokmd-core/analysis"]

[dependencies]
js-sys = "0.3.91"
serde_json.workspace = true
tokmd-core.workspace = true
tokmd-envelope.workspace = true
wasm-bindgen = "0.2.114"

[dev-dependencies]
tokmd-types = { path = "../tokmd-types", version = ">=1.9, <2" }
wasm-bindgen-test = "0.3.72"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
