[package]
name = "tokmd"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tokmd"
description = "Tokei-backed repo inventory receipts (Markdown/TSV/JSONL/CSV) for PRs, CI, and LLM workflows."
readme = "../../README.md"
keywords = ["repo-analysis", "inventory", "llm-context", "receipts", "tokei"]
categories = ["command-line-utilities", "development-tools"]
default-run = "tokmd"
autobins = false
exclude = [
    ".github",
    ".gitignore",
    ".gitattributes",
    "CLAUDE.md",
    "TODO.md",
    "mutants.toml",
    "mutants.out",
    "mutants.out.old",
    "fuzz",
    "tests",
]

[features]
default = ["git", "walk", "content", "ui", "fun", "topics", "archetype"]
alias-tok = []
git = [
    "tokmd-analysis/git",
    "dep:tokmd-git",
    "dep:tokmd-cockpit",
    "tokmd-cockpit/git",
    "tokmd-context-git/git",
]
walk = ["tokmd-analysis/walk"]
content = ["tokmd-analysis/content"]
fun = ["tokmd-analysis/fun", "tokmd-analysis-format/fun"]
topics = ["tokmd-analysis/topics"]
archetype = ["tokmd-analysis/archetype"]
ui = ["dep:dialoguer", "dep:console", "dep:toml", "tokmd-progress/ui"]

[[bin]]
name = "tokmd"
path = "src/bin/tokmd.rs"

[[bin]]
name = "tok"
path = "src/bin/tok.rs"
required-features = ["alias-tok"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
tokmd-analysis = { workspace = true }
tokmd-analysis-explain.workspace = true
tokmd-analysis-format = { workspace = true }
tokmd-analysis-types.workspace = true
tokmd-analysis-grid.workspace = true
tokmd-badge.workspace = true
tokmd-config.workspace = true
tokmd-model.workspace = true
tokmd-exclude.workspace = true
tokmd-path.workspace = true
tokmd-context-git.workspace = true
tokmd-context-policy.workspace = true
tokmd-envelope.workspace = true
tokmd-export-tree.workspace = true
tokmd-progress.workspace = true
tokmd-scan.workspace = true

tokmd-settings.workspace = true

tokmd-format.workspace = true
tokmd-tokeignore.workspace = true
tokmd-tool-schema.workspace = true
tokmd-types.workspace = true
tokmd-cockpit = { workspace = true, optional = true }
tokmd-git = { workspace = true, optional = true }
clap_complete = "4.5.66"
dialoguer = { version = "0.12.0", optional = true }
console = { version = "0.16.2", optional = true }
toml = { version = "1.0.3", optional = true }
dirs = "6.0.0"
serde_json = "1.0.149"
tokmd-gate.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
blake3.workspace = true
time = { version = "0.3.47", features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.25.0"
insta = { workspace = true }
regex = "1.12.3"
proptest = "1.10.0"
jsonschema = "0.45.0"
toml = "1.0.3"
tokmd-analysis-derived.workspace = true
