[package]
name = "tokmd"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tokmd"
description = "Tokei-backed repo inventory receipts (Markdown/TSV/JSONL/CSV) for PRs, CI, and LLM workflows."
readme = "../../README.md"
keywords = ["repo-analysis", "inventory", "llm-context", "receipts", "tokei"]
categories = ["command-line-utilities", "development-tools"]
default-run = "tokmd"
autobins = false
exclude = [
    ".github",
    ".gitignore",
    ".gitattributes",
    "CLAUDE.md",
    "TODO.md",
    "mutants.toml",
    "mutants.out",
    "mutants.out.old",
    "fuzz",
    "tests",
]

[features]
default = ["git", "walk", "content", "ui", "fun", "topics", "archetype", "analysis"]
alias-tok = []
analysis = ["tokmd-core/analysis"]
git = [
    "tokmd-analysis/git",
    "dep:tokmd-git",
    "dep:tokmd-cockpit",
    "tokmd-cockpit/git",
    "tokmd-core/git",
]
walk = ["tokmd-analysis/walk"]
content = ["tokmd-analysis/content"]
fun = ["tokmd-analysis/fun", "tokmd-core/fun"]
topics = ["tokmd-analysis/topics"]
archetype = ["tokmd-analysis/archetype"]
ui = ["dep:dialoguer", "dep:console", "dep:toml", "dep:indicatif"]

[[bin]]
name = "tokmd"
path = "src/bin/tokmd.rs"

[[bin]]
name = "tok"
path = "src/bin/tok.rs"
required-features = ["alias-tok"]

[dependencies]
anyhow.workspace = true
clap = { version = "4.6.0", features = ["derive"] }
tokmd-analysis = { workspace = true }
tokmd-analysis-types.workspace = true
tokmd-model.workspace = true
tokmd-envelope.workspace = true
tokmd-scan.workspace = true

tokmd-settings.workspace = true

tokmd-core.workspace = true
tokmd-format.workspace = true
tokmd-types = { workspace = true, features = ["clap"] }
tokmd-cockpit = { workspace = true, optional = true }
tokmd-git = { workspace = true, optional = true }
clap_complete = "4.6.1"
dialoguer = { version = "0.12.0", optional = true }
console = { version = "0.16.3", optional = true }
toml = { version = "1.1.2", optional = true }
indicatif = { version = "0.18.4", optional = true }
dirs = "6.0.0"
serde_json.workspace = true
tokmd-gate.workspace = true
serde.workspace = true
blake3.workspace = true
time = { version = "0.3.47", features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile.workspace = true
insta = { workspace = true }
regex = "1.12.3"
proptest.workspace = true
jsonschema = { version = "0.46.2", default-features = false, features = ["resolve-file"] }
toml = "1.1.2"
